<resources>
    <string name="app_name">Geek Quizz</string>
    <string name="play_button">Jugar</string>
    <string name="options_button">Opciones</string>
    <string name="temas">Temas</string>
    <string name="anime">Anime</string>
    <string name="cine">Cine</string>
    <string name="furry">Furry</string>
    <string name="deportes">Deportes</string>
    <string name="toons">Toons</string>
    <string name="videojuegos">Videojuegos</string>
    <string name="todos">Todos</string>
    <string name="numero_preguntas">Cantidad de preguntas</string>
    <string name="dificultad">Dificultad</string>
    <string name="baja">Baja</string>
    <string name="media">Media</string>
    <string name="alta">Alta</string>
    <string name="switch_pistas">Habilitar pistas</string>
    <string name="cantidad_pistas">Número de pistas</string>
    <string name="guardar">Guardar</string>
    <string name="question_number">Pregunta: %d/%d</string>
    <string name="hints_used">Pistas usadas: %d/%d</string>
    <string name="hint">Usar Pista</string>
    <string name="question">Pregunta</string>
    <string name="previous">Anterior</string>
    <string name="next">Siguiente</string>
    <string name="option_one">Respuesta 1</string>
    <string name="option_two">Respuesta 2</string>
    <string name="option_three">Respuesta 3</string>
    <string name="option_four">Respuesta 4</string>
    <string name="end_game">Fin del juego</string>
    <string name="okay">Okay</string>
    <string name="default_user">Usuario</string>
    <string name="score_button">Puntuaciones</string>
    <string name="new_game_message">Tienes un juego guardado. ¿Deseas continuar?</string>
    <string name="new_game_possitive_button">Continuar</string>
    <string name="new_game_neutral_button">Nuevo Juego</string>
    <string name="star_for_not_using_hints">Star for not using hints</string>
    <string name="final_score">PUNTUACIÓN FINAL</string>
    <string name="disclaimer">*Los jugadores sin estrellas han usado pistas</string>
    <string name="position">%d°</string>
    <string name="add_user">Agregar usuario</string>
    <string name="delete_button">Delete Button</string>
    <string name="profile_image">Profile Image</string>
    <string name="title">Editar Usuario</string>
    <string name="user_name_hint">Nombre</string>
    <string name="negative_button">Cancelar</string>
    <string name="positive_button">Aceptar</string>
    <string name="empty_user_name">El nombre de usuario está vacío</string>
    <string name="taken_user_name">Este nombre ya ha sido ocupado</string>
    <string name="user_updated">Usuario actualizado</string>
    <string name="user_inserted">Usuario agregado</string>
    <string name="global_score">Puntuación Global</string>
    <string name="players">Jugadores</string>
    <string name="score">Puntos</string>
    <string name="hints">Pistas</string>
    <string name="date">Fecha</string>
    <string name="player_statistics_name">Partidas de %s</string>
    <string name="order_by_score">Ordenar por puntos</string>
    <string name="order_by_date">Ordenar por fecha</string>
    <string name="settings">Opciones</string>

    <string-array name="question_spinner">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="hints_spinner">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>