<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".options.OptionsActivity">

    <LinearLayout
        android:id="@+id/topicsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/questionQuantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/topics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temas"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/animeCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anime"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/cineCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cine"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/furryCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/furry"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/deportesCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deportes"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/toonsCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toons"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/videojuegosCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/videojuegos"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <CheckBox
            android:id="@+id/todosCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todos"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/questionQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_preguntas"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/difficultyLayout"
        app:layout_constraintEnd_toStartOf="@+id/questionSpinner"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topicsLayout" />

    <Spinner
        android:id="@+id/questionSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/questionQuantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/questionQuantity"
        app:layout_constraintTop_toTopOf="@+id/questionQuantity" />

    <LinearLayout
        android:id="@+id/difficultyLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/hintsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionQuantity">

        <TextView
            android:id="@+id/difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dificultad"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/difficultyRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/lowButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baja"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/mediumButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/media"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/highButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alta"
                android:textSize="16sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hintsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficultyLayout">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/hintSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_pistas"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/hintsSpinnerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hintsQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cantidad_pistas"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/hintsSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>